fixed spacing between multiple words and counts down guesses left and guessed letters

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,3 +4,6 @@
     height: 350px;
     border: 1px solid;
 }
+#blank-underscores {
+    letter-spacing: 4px;
+}
